src/objects/Portfolio_Report__c.object
<CustomObject>
    <description>Object is a launching point for the recalculation of interest accrual for ad-hoc dates.</description>
    <fields>
        <fullName>Batch_Instance_Id__c</fullName>
        <inlineHelpText>Id of batch job running update</inlineHelpText>
        <label>Batch Instance Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Errors__c</fullName>
        <inlineHelpText>Description of any messages or errors which occurred in the batch</inlineHelpText>
        <label>Messages</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>From_Date__c</fullName>
        <inlineHelpText>Starting Date of the Report</inlineHelpText>
        <label>From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Since_Inception__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if the starting date should be adjusted to the start of each individual loan.</inlineHelpText>
        <label>Since Inception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Indicates when report is running</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Submitted</fullName>
                    <default>true</default>
                    <label>Not Submitted</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>To_Date__c</fullName>
        <inlineHelpText>Ending Date of Report</inlineHelpText>
        <label>To Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Portfolio Report</label>
    <nameField>
        <displayFormat>PR-{00000}</displayFormat>
        <label>Report Instance</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Portfolio Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>From_Date_Required</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
    AND(isblank(From_Date__c), NOT( Since_Inception__c )),
    AND(not(isblank(From_Date__c)) ,Since_Inception__c))</errorConditionFormula>
        <errorMessage>Please enter a From Date or mark Since Inception but not both.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>From_Date_less_than_To_Date</fullName>
        <active>true</active>
        <errorConditionFormula>AND(  NOT(Since_Inception__c) ,
      From_Date__c &gt;  To_Date__c )</errorConditionFormula>
        <errorMessage>Ensure From Date is earlier than To date.</errorMessage>
    </validationRules>
</CustomObject>